fixed header z-index, fixed content elm not growing

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body { margin: 0; font-family: "Ubuntu", sans-serif; min-height: 100vh; display:
 
 body input, body textarea, body button { font-family: inherit; }
 
-body > div:nth-last-child(3) { flex-grow: 1; }
+body > div:nth-child(2) { flex-grow: 1; }
 
 .hide { display: none !important; }
 
@@ -12,7 +12,7 @@ body > div:nth-last-child(3) { flex-grow: 1; }
 
 @media screen and (max-width: 1050px) { header { justify-content: center; align-items: center; flex-wrap: wrap; } header .header-elements { display: flex; flex-direction: row; align-items: center; width: 95%; } header .header-elements-top { flex-direction: column !important; position: absolute; top: 75px; right: 0px; background-color: #eb2340; } header .header-elements-top button { width: 130px; padding-left: 0.75em !important; text-align: left !important; } header .mobile-menu { display: block !important; } }
 
-header { display: flex; flex-direction: row; align-items: center; width: 100%; min-height: 75px; background-color: #eb2340; }
+header { display: flex; flex-direction: row; align-items: center; width: 100%; min-height: 75px; background-color: #eb2340; z-index: 999; }
 
 header img { padding: 0em 1em 0em 1em; width: 250px; height: 25px; }
 
@@ -269,5 +269,3 @@ header .mobile-menu { display: none; margin: 0 0.1em 0 0; color: #ffffff; }
 .login > div label { font-weight: 500; }
 
 .login > div button { margin-top: 1em; width: min-content; padding: 0.5em; white-space: nowrap; border: 0; background-color: #eb2340; color: #ffffff; font-weight: 700; font-size: 1em; align-self: flex-end; }
-
-/*# sourceMappingURL=main.css.map */
